meja/tests/row-absent-name.stderr
File "tests/row-absent-name.meja", line 2, characters 19-20:
Error: The constructor `Y is not present in this row.

