meja/tests/row-absent-name.meja
module type S = {
  let x : [< `X > `Y];
};
